--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
-    "morgan": "^1.10.0",
-    "body-parser": "^1.20.2"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
